--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
+    
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -13,14 +15,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="style.css?version=20">
+    <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 
 </head>
 <body>
-
+     <h1 class = "setter" id = "title">Welcome to the HoHS Reward Bank! </h1>
+     <img class = "setter" id = "logo" src="hhs.png" alt="HoHS Logo">
     <div class = "wrapper">
+       
         <form action="login.php" method="POST">
             <h1>Login</h1>
             <div class="input-box">
